# AVR-Geiger

./: CMakeLists.txt  config.c  config.h  defines.h  easyavr.h  eep_config.c  eep_config.h  icons.h  init.c  init.h  main.c  main.h  menu.c  menu.h  n3310.c  n3310.h
other/: Backup Of geiger.pdsbak  design.xcf  geiger.pdsprj  geiger.pdsprj.MultiMote-P.MultiMote.workspace
